--- a/test.yml
+++ b/test.yml
@@ -1,6 +1,11 @@
 ---
 - name: Add Group | {{ new_user }}
   group:
-     name: "{{ new_user }}"
-     state: present
-   
+    name: "{{ new_user }}"
+    state: present
+
+- name: Add User | {{ new_user }}
+  user:
+    name: "{{ new_user }}"
+    group: "{{ new_user }}"
+    shell: /bin/bash
